--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <!-- Include or use base.html content here -->
-    <iframe src="path/to/sc/app/templates/app/base.html" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="sc\app\templates\app\base.html" style="width:100%; height:100%;" frameborder="0"></iframe>
 </body>
 </html>
